test/valid/AbstractMethodsCanOverride/Sub.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: Sub.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class Sub extends Super is

	method override toString : () -> String is
		"Sub"
		
	method main : () -> String is
		this.toString()